--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,12 +1,12 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v6.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
 
   - repo: https://github.com/psf/black
-    rev: 22.3.0
+    rev: 25.12.0
     hooks:
       - id: black
         entry: black
@@ -15,16 +15,19 @@ repos:
         args: [--line-length=88]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.942
+    rev: v1.19.1
     hooks:
       - id: mypy
         entry: mypy
         language_version: python
         types: [python]
+        additional_dependencies:
+        - pydantic-settings
+        - pydantic
         args: []
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.3.0
+    rev: v0.14.10
     hooks:
       - id: ruff
         entry: ruff check
